# test_random_crate

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix
src/: cli.rs  config.rs  main.rs
