[package]
name = "test_random_crate"
version = "0.1.0"
authors = ["Amy Keibler <amelia.keibler@gmail.com>"]
edition = "2018"
description = "Fetch crates and run a command against them for testing purposes"

license = "MIT OR Apache-2.0"

[dependencies]
color-eyre = "0.5.11"
eyre = "0.6.5"
serde = { version = "1.0.130", features = ["derive"] }
structopt = "0.3.25"
toml = "0.5.8"